--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Eduvial</title>
+
 </head>
+
 <body>
-    <h1></h1>
+    <nav class="navbar">
+        <div class="logo_wrapper">
+            <div class="logo_image">
+                <img src="img/logo_transparency.png" alt="eduvial logo">
+            </div>
+            <div class="vertical_bar"></div>
+            <p class="eduvial_primary_text">Eduvial</p>
+            <p class="eduvial_secondary_text">Seguridad vial</p>
+        </div>
+
+        <div class="navbar_items">
+            <a class="navbar_item" href="#">Inicio</a>
+            <a class="navbar_item" href="#">¿Quiénes somos?</a>
+            <a class="navbar_item" href="#">Avances</a>
+            <a class="navbar_item" href="#">Juegos</a>
+        </div>
+
+        <i class="fa fa-solid fa-bars"></i>
+    </nav>
+    <script src="https://kit.fontawesome.com/2b39c56c30.js" crossorigin="anonymous"></script>
+    <script src="script/app.js"></script>
 </body>
+
 </html>
