--- a/index.html
+++ b/index.html
@@ -7,31 +7,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/home.css">
     <title>Eduvial</title>
 
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="logo_wrapper">
-            <div class="logo_image">
-                <img src="img/logo_transparency.png" alt="eduvial logo">
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo_wrapper">
+                <div class="logo_image">
+                    <img src="img/logo_transparency.png" alt="eduvial logo">
+                </div>
+                <div class="vertical_bar"></div>
+                <p class="eduvial_primary_text">Eduvial</p>
+                <p class="eduvial_secondary_text">Seguridad vial</p>
             </div>
-            <div class="vertical_bar"></div>
-            <p class="eduvial_primary_text">Eduvial</p>
-            <p class="eduvial_secondary_text">Seguridad vial</p>
-        </div>
 
-        <div class="navbar_items">
-            <a class="navbar_item" href="#">Inicio</a>
-            <a class="navbar_item" href="#">¿Quiénes somos?</a>
-            <a class="navbar_item" href="#">Avances</a>
-            <a class="navbar_item" href="#">Juegos</a>
-        </div>
+            <div class="navbar_items">
+                <a class="navbar_item" href="#">Inicio</a>
+                <a class="navbar_item" href="#">¿Quiénes somos?</a>
+                <a class="navbar_item" href="#">Avances</a>
+                <a class="navbar_item" href="#">Juegos</a>
+            </div>
 
-        <i class="fa fa-solid fa-bars"></i>
-    </nav>
+            <i class="fa fa-solid fa-bars"></i>
+        </nav>
+
+        <div class="hero">
+            <h1 class="main_title_mobile">Aprende las reglas de tránsito mientras te diviertas.</h1>
+            <h1 class="main_title_desktop">Aprende las reglas de tránsito mientras te diviertes.
+                <br>¡Explora nuestros juegos interactivos
+                <br>y conviértete en un experto en educación vial!</h1>
+            <button class="btn">Jugá y <br>aprendé ahora</button>
+        </div>
+    </header>
     <script src="https://kit.fontawesome.com/2b39c56c30.js" crossorigin="anonymous"></script>
     <script src="script/app.js"></script>
 </body>
