Se agrega seccion main con estilos para mobile, tablet y desktop

--- a/index.html
+++ b/index.html
@@ -42,6 +42,38 @@
             <button class="btn">Jugá y <br>aprendé ahora</button>
         </div>
     </header>
+    <main class="main">
+        <div class="logo_uade">
+            <img src="img/uadelogo.png" alt="logo de la UADE">
+        </div>
+
+        <section class="section_datos">
+            <div class="dato_item">
+                <p class="dato_title">Materia : </p>
+                <p class="dato_description">Diseño y desarrollo web</p>
+            </div>
+
+            <div class="dato_item">
+                <p class="dato_title">Nombre del equipo : </p>
+                <p class="dato_description">EDUVIAL</p>
+            </div>
+
+            <div class="dato_item">
+                <p class="dato_title">Número del grupo : </p>
+                <p class="dato_description">10</p>
+            </div>
+
+            <div class="dato_item">
+                <p class="dato_title">Curso : </p>
+                <p class="dato_description">466029</p>
+            </div>
+
+            <div class="dato_item">
+                <p class="dato_title">Docente : </p>
+                <p class="dato_description">Litovicius Patricia Carina</p>
+            </div>
+        </section>
+    </main>
     <script src="https://kit.fontawesome.com/2b39c56c30.js" crossorigin="anonymous"></script>
     <script src="script/app.js"></script>
 </body>
