Se agregan estilos de footer para mbile, tablet y desktop

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <h1 class="main_title_mobile">Aprende las reglas de tránsito mientras te diviertas.</h1>
             <h1 class="main_title_desktop">Aprende las reglas de tránsito mientras te diviertes.
                 <br>¡Explora nuestros juegos interactivos
-                <br>y conviértete en un experto en educación vial!</h1>
+                <br>y conviértete en un experto en educación vial!
+            </h1>
             <button class="btn">Jugá y <br>aprendé ahora</button>
         </div>
     </header>
@@ -74,6 +75,24 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <nav class="footer_nav">
+            <a href="#">¿Quienes somos?</a>
+            <a href="#">Avances</a>
+            <a href="#">Juegos</a>
+        </nav>
+
+        <div class="mapa_sitio">
+            <p class="mapa_sitio_description">Mapa del sitio</p>
+            <i class="fa fa-solid fa-sitemap"></i>
+        </div>
+
+        <div class="footer_copy">
+            <p class="footer_copy_description">Derechos reservados  </p>
+            <p class="footer_copy_description">- Sitio desarrollado para uso educativo</p>
+            <p class="footer_copy_description">Diseño y desarrollo Web - UADE - 2024</p>
+        </div>
+    </footer>
     <script src="https://kit.fontawesome.com/2b39c56c30.js" crossorigin="anonymous"></script>
     <script src="script/app.js"></script>
 </body>
