Se agrega diseño responsive al juego de memorama

--- a/memorama/index.html
+++ b/memorama/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h2>Errores: <span id="errors">0</span></h2>
-    <div id="board">
+    <div id="board" class="board">
         <div class="overlay">
             <div class="description_popup" id="description_popup">
                 <button class="btn_popup_close">✖</button>
