vrios-agrego página juegos

--- a/juegos.html
+++ b/juegos.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/juegos.css">
     <title>Eduvial</title>
 
 </head>
@@ -33,47 +33,9 @@
 
             <i class="fa fa-solid fa-bars"></i>
         </nav>
-
-        <div class="hero">
-            <h1 class="main_title_mobile">Aprende las reglas de tránsito mientras te diviertas.</h1>
-            <h1 class="main_title_desktop">Aprende las reglas de tránsito mientras te diviertes.
-                <br>¡Explora nuestros juegos interactivos
-                <br>y conviértete en un experto en educación vial!
-            </h1>
-            <button class="btn">Jugá y <br>aprendé ahora</button>
-        </div>
     </header>
     <main class="main">
-        <div class="logo_uade">
-            <img src="img/uadelogo.png" alt="logo de la UADE">
-        </div>
-
-        <section class="section_datos">
-            <div class="dato_item">
-                <p class="dato_title">Materia : </p>
-                <p class="dato_description">Diseño y desarrollo web</p>
-            </div>
-
-            <div class="dato_item">
-                <p class="dato_title">Nombre del equipo : </p>
-                <p class="dato_description">EDUVIAL</p>
-            </div>
-
-            <div class="dato_item">
-                <p class="dato_title">Número del grupo : </p>
-                <p class="dato_description">10</p>
-            </div>
-
-            <div class="dato_item">
-                <p class="dato_title">Curso : </p>
-                <p class="dato_description">466029</p>
-            </div>
-
-            <div class="dato_item">
-                <p class="dato_title">Docente : </p>
-                <p class="dato_description">Litovicius Patricia Carina</p>
-            </div>
-        </section>
+       <p>HOLA</p>
     </main>
     <footer class="footer">
         <nav class="footer_nav">
