--- a/juegos.html
+++ b/juegos.html
@@ -34,8 +34,43 @@
             <i class="fa fa-solid fa-bars"></i>
         </nav>
     </header>
+
+
     <main class="main">
-       <p>HOLA</p>
+
+       <div class="container">
+        <h1>Nuestros Juegos</h1>
+        <div class="game-container">
+            <h2>Memorama</h2>
+            <p>¡Pon a prueba tu memoria y diviértete con nuestro juego de memoria vial! Busca y empareja las imágenes
+            iguales, todas relacionadas con la seguridad vial. ¡Aprende y recuerda las señales de tráfico mientras juegas!</p>
+            <img src="img/juego_memorama.png" alt="Memorama">
+            <a href="memorama/index.html" class="play-button">Jugar Memorama</a>
+        </div>
+        <div class="game-container">
+            <h2>Tetris</h2>
+            <p>¿Te gustan los clásicos del game boy? Pues, abrochate el cinturón para viajar al pasado y ordenar las señales
+            de tránsito como si fueran piezas de tetris. </p>
+            <img src="imagen2.jpg" alt="Tetris">
+            <a href="tetris/index.html" class="play-button">Jugar Tetris</a>
+        </div>
+        <div class="game-container">
+            <h2>juego 3</h2>
+            <p>descripcion</p>
+            <img src="imagen3.jpg" alt="Juego 3">
+            <a href="tetris.html" class="play-button">Jugar Tetris</a>
+        </div>
+        <div class="game-container">
+            <h2>juego 4</h2>
+            <p>descripcion</p>
+            <img src="imagen4.jpg" alt="Juego 4">
+            <a href="tetris.html" class="play-button">Jugar Tetris</a>
+        </div>
+    </div>
+
+
+
+
     </main>
     <footer class="footer">
         <nav class="footer_nav">
