vrios-update valeria info en quienes somos page

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -69,10 +69,10 @@
                     <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
                    </div>
                 <div class="cajasintegrantes">
-                 <img src="img/integrantes/Img_Andrea.JPG" alt="foto" class="fotosintegrantes" >
+                 <img src="img/integrantes/img_valeria.jpg" alt="foto" class="fotosintegrantes" >
                  <br><a class="Nombreintegrante">Nancy Valeria Rios Benitez</a>
-                 <br><a href="#" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                 <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
+                 <br><a href="https://www.linkedin.com/in/valeriariosbenitez/" class="Nombreintegrante" target="_blank">LinkedIn</a>
+                 <br><a href="https://vriosbenitez.github.io/desarrolloWebSitioProfesional/about.html" class="Nombreintegrante" target="_blank">Ficha Personal</a>
                 </div> 
              </div>              
     </main>
