--- a/juegos.html
+++ b/juegos.html
@@ -26,7 +26,7 @@
 
             <div class="navbar_items">
                 <a class="navbar_item" href="index.html">Inicio</a>
-                <a class="navbar_item" href="#">¿Quiénes somos?</a>
+                <a class="navbar_item" href="quienes_somos.html">¿Quiénes somos?</a>
                 <a class="navbar_item" href="#">Avances</a>
                 <a class="navbar_item" href="juegos.html">Juegos</a>
             </div>
@@ -74,7 +74,7 @@
     </main>
     <footer class="footer">
         <nav class="footer_nav">
-            <a href="#">¿Quienes somos?</a>
+            <a href="quienes_somos.html">¿Quienes somos?</a>
             <a href="#">Avances</a>
             <a href="juegos.html">Juegos</a>
         </nav>
