vrios-minor changes

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -78,9 +78,9 @@
     </main>
     <footer class="footer">
         <nav class="footer_nav">
-            <a href="#">¿Quienes somos?</a>
+            <a href="quienes_somos.html">¿Quienes somos?</a>
             <a href="#">Avances</a>
-            <a href="#">Juegos</a>
+            <a href="juegos.html">Juegos</a>
         </nav>
 
         <div class="mapa_sitio">
