vrios-agrego el juego de señales crush

--- a/juegos.html
+++ b/juegos.html
@@ -48,11 +48,10 @@
             <a href="memorama/index.html" class="play-button">Jugar <br> Memorama</a>
         </div>
         <div class="game-container">
-            <h2 class="eduvial_tittle">Tetris</h2>
-            <p>¿Te gustan los clásicos del game boy? Pues, abrochate el cinturón para viajar al pasado y ordenar las señales
-            de tránsito como si fueran piezas de tetris. </p>
-            <img src="imagen2.jpg" alt="Tetris">
-            <a href="tetris/index.html" class="play-button">Jugar <br> Tetris</a>
+            <h2 class="eduvial_tittle">Señales Crush</h2>
+            <p>Divierte en el crushing de las señales de tránsito como si fueran los caramelos para ganar puntos mientras aprendes. </p>
+            <img src="imagen2.jpg" alt="Señales Crush">
+            <a href="crush/index.html" class="play-button">Jugar <br> Señales Crush</a>
         </div>
         <div class="game-container">
             <h2 class="eduvial_tittle">juego 3</h2>
