--- a/crush/index.html
+++ b/crush/index.html
@@ -8,10 +8,13 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <div class="score-board">
-        <h3>score</h3>
-        <h1 id="score"></h1>
+    <div class="container">
+        <div class="score-board">
+            <h3>Puntaje</h3>
+            <h1 id="score">0</h1>
+        </div>
+        <div class="grid"></div>
+        <a href="../index.html" class="return-button">Volver al inicio</a>
     </div>
-    <div class="grid"></div>
 </body>
 </html>
