vrios-Crush page - cambio boton

--- a/crush/index.html
+++ b/crush/index.html
@@ -14,7 +14,7 @@
             <h1 id="score">0</h1>
         </div>
         <div class="grid"></div>
-        <a href="../index.html" class="return-button">Volver al inicio</a>
+        <a href="../juegos.html" class="return-button">Volver a Juegos</a>
     </div>
 </body>
 </html>
