Juego Ahorcado en juegos.html
Se incorpora juego ahorcado vial a página de juegos.

--- a/juegos.html
+++ b/juegos.html
@@ -54,10 +54,12 @@
             <a href="crush/index.html" class="play-button">Jugar <br> Señales Crush</a>
         </div>
         <div class="game-container">
-            <h2 class="eduvial_tittle">juego 3</h2>
-            <p>descripcion</p>
-            <img src="imagen3.jpg" alt="Juego 3">
-            <a href="tetris.html" class="play-button">Jugar <br> Tetris</a>
+            <h2 class="eduvial_tittle">Ahorcado Vial</h2>
+            <p>Ahorcado Vial” es una versión educativa y divertida del clásico juego del ahorcado. Está diseñado para ayudar a los niños y adolescentes a aprender y recordar términos importantes relacionados con la educación vial. Cada palabra en el juego está asociada con el tránsito y la seguridad vial, lo que ayuda a los jugadores a familiarizarse con estos conceptos mientras se divierten.
+               Este juego es una excelente manera de combinar el aprendizaje y el juego, y puede ser una herramienta útil para enseñar a los niños y adolescentes sobre la importancia de la seguridad vial de una manera que sea atractiva y memorable.</p>
+            </p>
+            <img src="img/juego_ahorcado.PNG" alt="Ahorcado Vial">
+            <a href="ahorcado/index.html" class="play-button">Jugar <br>Ahorcado</a>
         </div>
         <div class="game-container">
             <h2 class="eduvial_tittle">juego 4</h2>
