--- a/juegos.html
+++ b/juegos.html
@@ -50,7 +50,7 @@
         <div class="game-container">
             <h2 class="eduvial_tittle">Señales Crush</h2>
             <p>Divierte en el crushing de las señales de tránsito como si fueran los caramelos para ganar puntos mientras aprendes. </p>
-            <img src="img/senialesCrush_img.png" alt="Señales Crush">
+            <img src="img/crushImage.png" alt="Señales Crush">
             <a href="crush/index.html" class="play-button">Jugar <br> Señales Crush</a>
         </div>
         <div class="game-container">
