--- a/juegos.html
+++ b/juegos.html
@@ -55,7 +55,7 @@
         </div>
         <div class="game-container">
             <h2 class="eduvial_tittle">Ahorcado Vial</h2>
-            <p>Ahorcado Vial” es una versión educativa y divertida del clásico juego del ahorcado. Está diseñado para ayudar a los niños y adolescentes a aprender y recordar términos importantes relacionados con la educación vial. Cada palabra en el juego está asociada con el tránsito y la seguridad vial, lo que ayuda a los jugadores a familiarizarse con estos conceptos mientras se divierten.
+            <p>Ahorcado Vial es una versión educativa y divertida del clásico juego del ahorcado. Está diseñado para ayudar a los niños y adolescentes a aprender y recordar términos importantes relacionados con la educación vial. Cada palabra en el juego está asociada con el tránsito y la seguridad vial, lo que ayuda a los jugadores a familiarizarse con estos conceptos mientras se divierten.
                Este juego es una excelente manera de combinar el aprendizaje y el juego, y puede ser una herramienta útil para enseñar a los niños y adolescentes sobre la importancia de la seguridad vial de una manera que sea atractiva y memorable.</p>
             </p>
             <img src="img/juego_ahorcado.PNG" alt="Ahorcado Vial">
