Se agregan enlaces de linkedin y ficha personal

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/quienessomos.css">
     <title>Eduvial</title>
 </head>
+
 <body>
     <header class="header">
         <nav class="navbar">
@@ -33,48 +34,53 @@
         </nav>
     </header>
     <main class="main">
-            <h1 class="quienessomos_title">¿Quiénes somos?</h1>
-            <br>
-            <br>
-            <p class="quienessomos_description">Somos un grupo de cinco estudiantes de primer año de la carrera de Licenciatura en Gestión
-                de Tecnología de la información, unidos por un interés común, la seguridad vial y la educación. Cada uno
-                de nosotros aporta habilidades y perspectivas únicas que enriquesen nuestro proyecto y nos permiten crear 
-                una experiencia educativa integral y divertida.</p>
-            <br>
-            <br>
-       
-            <div class="contenedorflex">
-                <div class="cajasintegrantes">
-                    <img src="img/integrantes/nico_image.jpg" alt="foto" class="fotosintegrantes" >
-                    <br><a class="Nombreintegrante">Nicolás Maximiliano Caruso </a>
-                    <br><a href="#" class="Nombreintegrante">LinkedIn</a>
-                    <br><a href="#" class="Nombreintegrante">Ficha Personal</a>
-                   </div>
-                <div class="cajasintegrantes">
-                 <img src="img/integrantes/Img_Andrea.JPG" alt="foto" class="fotosintegrantes" >
-                 <br><a class="Nombreintegrante">Andrea Iris Andreus</a>
-                 <br><a href="https://www.linkedin.com/in/andrea-iris-andreus-07812650/" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                 <br><a href="https://andreairis.github.io/sitioFichaPersonal/" class="Nombreintegrante" target="_blank">Ficha Personal</a>
-             </div>
-                <div class="cajasintegrantes">
-                    <img src="img/integrantes/BrunoMoriones.jpg" alt="foto" class="fotosintegrantes" >
-                    <br><a class="Nombreintegrante">Bruno Moriones</a>
-                    <br><a href="#" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                    <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
-                   </div>
-                <div class="cajasintegrantes">
-                    <img src="img/integrantes/nico_image.jpg" alt="foto" class="fotosintegrantes" >
-                    <br><a class="Nombreintegrante">Juan Manuel Higa</a>
-                    <br><a href="#" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                    <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
-                   </div>
-                <div class="cajasintegrantes">
-                 <img src="img/integrantes/img_valeria.jpg" alt="foto" class="fotosintegrantes" >
-                 <br><a class="Nombreintegrante">Nancy Valeria Rios Benitez</a>
-                 <br><a href="https://www.linkedin.com/in/valeriariosbenitez/" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                 <br><a href="https://vriosbenitez.github.io/desarrolloWebSitioProfesional/about.html" class="Nombreintegrante" target="_blank">Ficha Personal</a>
-                </div> 
-             </div>              
+        <h1 class="quienessomos_title">¿Quiénes somos?</h1>
+        <br>
+        <br>
+        <p class="quienessomos_description">Somos un grupo de cinco estudiantes de primer año de la carrera de
+            Licenciatura en Gestión
+            de Tecnología de la información, unidos por un interés común, la seguridad vial y la educación. Cada uno
+            de nosotros aporta habilidades y perspectivas únicas que enriquesen nuestro proyecto y nos permiten crear
+            una experiencia educativa integral y divertida.</p>
+        <br>
+        <br>
+
+        <div class="contenedorflex">
+            <div class="cajasintegrantes">
+                <img src="img/integrantes/nico_image.jpg" alt="foto" class="fotosintegrantes">
+                <br><a class="Nombreintegrante">Nicolás Maximiliano Caruso </a>
+                <br><a href="https://www.linkedin.com/in/nicolascaruso/" class="Nombreintegrante" target="_blank">LinkedIn</a>
+                <br><a href="https://valkyries12.github.io/d-d_primer_parcial/" class="Nombreintegrante" target="_blank">Ficha Personal</a>
+            </div>
+            <div class="cajasintegrantes">
+                <img src="img/integrantes/Img_Andrea.JPG" alt="foto" class="fotosintegrantes">
+                <br><a class="Nombreintegrante">Andrea Iris Andreus</a>
+                <br><a href="https://www.linkedin.com/in/andrea-iris-andreus-07812650/" class="Nombreintegrante"
+                    target="_blank">LinkedIn</a>
+                <br><a href="https://andreairis.github.io/sitioFichaPersonal/" class="Nombreintegrante"
+                    target="_blank">Ficha Personal</a>
+            </div>
+            <div class="cajasintegrantes">
+                <img src="img/integrantes/BrunoMoriones.jpg" alt="foto" class="fotosintegrantes">
+                <br><a class="Nombreintegrante">Bruno Moriones</a>
+                <br><a href="#" class="Nombreintegrante" target="_blank">LinkedIn</a>
+                <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
+            </div>
+            <div class="cajasintegrantes">
+                <img src="img/integrantes/nico_image.jpg" alt="foto" class="fotosintegrantes">
+                <br><a class="Nombreintegrante">Juan Manuel Higa</a>
+                <br><a href="#" class="Nombreintegrante" target="_blank">LinkedIn</a>
+                <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
+            </div>
+            <div class="cajasintegrantes">
+                <img src="img/integrantes/img_valeria.jpg" alt="foto" class="fotosintegrantes">
+                <br><a class="Nombreintegrante">Nancy Valeria Rios Benitez</a>
+                <br><a href="https://www.linkedin.com/in/valeriariosbenitez/" class="Nombreintegrante"
+                    target="_blank">LinkedIn</a>
+                <br><a href="https://vriosbenitez.github.io/desarrolloWebSitioProfesional/about.html"
+                    class="Nombreintegrante" target="_blank">Ficha Personal</a>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <nav class="footer_nav">
@@ -89,7 +95,7 @@
         </div>
 
         <div class="footer_copy">
-            <p class="footer_copy_description">Derechos reservados  </p>
+            <p class="footer_copy_description">Derechos reservados </p>
             <p class="footer_copy_description">- Sitio desarrollado para uso educativo</p>
             <p class="footer_copy_description">Diseño y desarrollo Web - UADE - 2024</p>
         </div>
