Centrados en hero y footer

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
         </div>
 
         <div class="footer_copy">
-            <p class="footer_copy_description">Derechos reservados  </p>
-            <p class="footer_copy_description">- Sitio desarrollado para uso educativo</p>
+            <p class="footer_copy_description">Derechos reservados - Sitio desarrollado para uso educativo</p>
             <p class="footer_copy_description">Diseño y desarrollo Web - UADE - 2024</p>
         </div>
     </footer>
