Modularizacion de estilos para navbar y footer

--- a/juegos.html
+++ b/juegos.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/juegos.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <title>Eduvial</title>
 
 </head>
@@ -38,36 +40,44 @@
 
     <main class="main">
 
-       <div class="container">
-        <h1 class="eduvial_tittle">Nuestros Juegos</h1>
-        <div class="game-container">
-            <h2 class="eduvial_tittle">Memorama</h2>
-            <p>¡Pon a prueba tu memoria y diviértete con nuestro juego de memoria vial! Busca y empareja las imágenes
-            iguales, todas relacionadas con la seguridad vial. ¡Aprende y recuerda las señales de tráfico mientras juegas!</p>
-            <img src="img/juego_memorama.png" alt="Memorama">
-            <a href="memorama/index.html" class="play-button">Jugar <br> Memorama</a>
+        <div class="container">
+            <h1 class="eduvial_tittle">Nuestros Juegos</h1>
+            <div class="game-container">
+                <h2 class="eduvial_tittle">Memorama</h2>
+                <p>¡Pon a prueba tu memoria y diviértete con nuestro juego de memoria vial! Busca y empareja las
+                    imágenes
+                    iguales, todas relacionadas con la seguridad vial. ¡Aprende y recuerda las señales de tráfico
+                    mientras juegas!</p>
+                <img src="img/juego_memorama.png" alt="Memorama">
+                <a href="memorama/index.html" class="play-button">Jugar <br> Memorama</a>
+            </div>
+            <div class="game-container">
+                <h2 class="eduvial_tittle">Señales Crush</h2>
+                <p>Divierte en el crushing de las señales de tránsito como si fueran los caramelos para ganar puntos
+                    mientras aprendes. </p>
+                <img src="img/crushImage.png" alt="Señales Crush">
+                <a href="crush/index.html" class="play-button">Jugar <br> Señales Crush</a>
+            </div>
+            <div class="game-container">
+                <h2 class="eduvial_tittle">Ahorcado Vial</h2>
+                <p>Ahorcado Vial es una versión educativa y divertida del clásico juego del ahorcado. Está diseñado para
+                    ayudar a los niños y adolescentes a aprender y recordar términos importantes relacionados con la
+                    educación vial. Cada palabra en el juego está asociada con el tránsito y la seguridad vial, lo que
+                    ayuda a los jugadores a familiarizarse con estos conceptos mientras se divierten.
+                    Este juego es una excelente manera de combinar el aprendizaje y el juego, y puede ser una
+                    herramienta útil para enseñar a los niños y adolescentes sobre la importancia de la seguridad vial
+                    de una manera que sea atractiva y memorable.</p>
+                </p>
+                <img src="img/juego_ahorcado.PNG" alt="Ahorcado Vial">
+                <a href="ahorcado/index.html" class="play-button">Jugar <br>Ahorcado</a>
+            </div>
+            <div class="game-container">
+                <h2 class="eduvial_tittle">juego 4</h2>
+                <p>descripcion</p>
+                <img src="imagen4.jpg" alt="Juego 4">
+                <a href="tetris.html" class="play-button">Jugar <br> Tetris</a>
+            </div>
         </div>
-        <div class="game-container">
-            <h2 class="eduvial_tittle">Señales Crush</h2>
-            <p>Divierte en el crushing de las señales de tránsito como si fueran los caramelos para ganar puntos mientras aprendes. </p>
-            <img src="img/crushImage.png" alt="Señales Crush">
-            <a href="crush/index.html" class="play-button">Jugar <br> Señales Crush</a>
-        </div>
-        <div class="game-container">
-            <h2 class="eduvial_tittle">Ahorcado Vial</h2>
-            <p>Ahorcado Vial es una versión educativa y divertida del clásico juego del ahorcado. Está diseñado para ayudar a los niños y adolescentes a aprender y recordar términos importantes relacionados con la educación vial. Cada palabra en el juego está asociada con el tránsito y la seguridad vial, lo que ayuda a los jugadores a familiarizarse con estos conceptos mientras se divierten.
-               Este juego es una excelente manera de combinar el aprendizaje y el juego, y puede ser una herramienta útil para enseñar a los niños y adolescentes sobre la importancia de la seguridad vial de una manera que sea atractiva y memorable.</p>
-            </p>
-            <img src="img/juego_ahorcado.PNG" alt="Ahorcado Vial">
-            <a href="ahorcado/index.html" class="play-button">Jugar <br>Ahorcado</a>
-        </div>
-        <div class="game-container">
-            <h2 class="eduvial_tittle">juego 4</h2>
-            <p>descripcion</p>
-            <img src="imagen4.jpg" alt="Juego 4">
-            <a href="tetris.html" class="play-button">Jugar <br> Tetris</a>
-        </div>
-    </div>
 
 
 
@@ -86,8 +96,7 @@
         </div>
 
         <div class="footer_copy">
-            <p class="footer_copy_description">Derechos reservados  </p>
-            <p class="footer_copy_description">- Sitio desarrollado para uso educativo</p>
+            <p class="footer_copy_description">Derechos reservados - Sitio desarrollado para uso educativo</p>
             <p class="footer_copy_description">Diseño y desarrollo Web - UADE - 2024</p>
         </div>
     </footer>
