--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/quienessomos.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <title>Eduvial</title>
 </head>
 
@@ -95,8 +97,7 @@
         </div>
 
         <div class="footer_copy">
-            <p class="footer_copy_description">Derechos reservados </p>
-            <p class="footer_copy_description">- Sitio desarrollado para uso educativo</p>
+            <p class="footer_copy_description">Derechos reservados - Sitio desarrollado para uso educativo</p>
             <p class="footer_copy_description">Diseño y desarrollo Web - UADE - 2024</p>
         </div>
     </footer>
