Se agrega redireccion a juegos en boton del Hero

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <br>¡Explora nuestros juegos interactivos
                 <br>y conviértete en un experto en educación vial!
             </h1>
-            <button class="btn">Jugá y <br>aprendé ahora</button>
+            <button class="btn"><a href="juegos.html">Jugá y <br>aprendé ahora</a></button>
         </div>
     </header>
     <main class="main">
