Se cambian algunos estilos de pagina intengrantes

--- a/memorama/index.html
+++ b/memorama/index.html
@@ -22,9 +22,8 @@
                 <button class="btn_popup_accept">Entendido</button>
             </div>
         </div>
-
-
     </div>
+    <button class="btn"><a href="../juegos.html">Volver a juegos</a></button>
 
     <script src="cards.js"></script>
 </body>
