--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -51,36 +51,58 @@
             <div class="cajasintegrantes">
                 <img src="img/integrantes/nico_image.jpg" alt="foto" class="fotosintegrantes">
                 <br><a class="Nombreintegrante">Nicolás Maximiliano Caruso </a>
-                <br><a href="https://www.linkedin.com/in/nicolascaruso/" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                <br><a href="https://valkyries12.github.io/d-d_primer_parcial/" class="Nombreintegrante" target="_blank">Ficha Personal</a>
+                <div class="social">
+                    <a href="https://valkyries12.github.io/d-d_primer_parcial/" target="_blank"><i
+                            class="fa fa-regular fa-eye"></i></a>
+                    <a href="https://www.linkedin.com/in/nicolascaruso/"  target="_blank"><i
+                            class="fa fa-brands fa-linkedin"></i></a>
+                </div>
             </div>
+
             <div class="cajasintegrantes">
                 <img src="img/integrantes/Img_Andrea.JPG" alt="foto" class="fotosintegrantes">
                 <br><a class="Nombreintegrante">Andrea Iris Andreus</a>
-                <br><a href="https://www.linkedin.com/in/andrea-iris-andreus-07812650/" class="Nombreintegrante"
-                    target="_blank">LinkedIn</a>
-                <br><a href="https://andreairis.github.io/sitioFichaPersonal/" class="Nombreintegrante"
-                    target="_blank">Ficha Personal</a>
+                <div class="social">
+                    <a href="https://andreairis.github.io/sitioFichaPersonal/" target="_blank"><i
+                            class="fa fa-regular fa-eye"></i></a>
+                    <a href="https://www.linkedin.com/in/andrea-iris-andreus-07812650/"  target="_blank"><i
+                            class="fa fa-brands fa-linkedin"></i></a>
+                </div>
             </div>
+
             <div class="cajasintegrantes">
                 <img src="img/integrantes/BrunoMoriones.jpg" alt="foto" class="fotosintegrantes">
                 <br><a class="Nombreintegrante">Bruno Moriones</a>
-                <br><a href="#" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
+                <div class="social">
+                    <a href="#" target="_blank"><i
+                            class="fa fa-regular fa-eye"></i></a>
+                    <a href="#"  target="_blank"><i
+                            class="fa fa-brands fa-linkedin"></i></a>
+                </div>
             </div>
+
+
             <div class="cajasintegrantes">
                 <img src="img/integrantes/nico_image.jpg" alt="foto" class="fotosintegrantes">
                 <br><a class="Nombreintegrante">Juan Manuel Higa</a>
-                <br><a href="#" class="Nombreintegrante" target="_blank">LinkedIn</a>
-                <br><a href="#" class="Nombreintegrante" target="_blank">Ficha Personal</a>
+                <div class="social">
+                    <a href="#" target="_blank"><i
+                            class="fa fa-regular fa-eye"></i></a>
+                    <a href="#"  target="_blank"><i
+                            class="fa fa-brands fa-linkedin"></i></a>
+                </div>
             </div>
+
+
             <div class="cajasintegrantes">
                 <img src="img/integrantes/img_valeria.jpg" alt="foto" class="fotosintegrantes">
                 <br><a class="Nombreintegrante">Nancy Valeria Rios Benitez</a>
-                <br><a href="https://www.linkedin.com/in/valeriariosbenitez/" class="Nombreintegrante"
-                    target="_blank">LinkedIn</a>
-                <br><a href="https://vriosbenitez.github.io/desarrolloWebSitioProfesional/about.html"
-                    class="Nombreintegrante" target="_blank">Ficha Personal</a>
+                <div class="social">
+                    <a href="https://vriosbenitez.github.io/desarrolloWebSitioProfesional/about.html" target="_blank"><i
+                            class="fa fa-regular fa-eye"></i></a>
+                    <a href="https://www.linkedin.com/in/valeriariosbenitez/"  target="_blank"><i
+                            class="fa fa-brands fa-linkedin"></i></a>
+                </div>
             </div>
         </div>
     </main>
