Se agrega sitemap + estilos mobile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/navbar.css">
     <title>Eduvial</title>
-
 </head>
 
 <body>
@@ -88,8 +87,8 @@
         </nav>
 
         <div class="mapa_sitio">
-            <p class="mapa_sitio_description">Mapa del sitio</p>
-            <i class="fa fa-solid fa-sitemap"></i>
+            <a href="sitemap.html"><p class="mapa_sitio_description">Mapa del sitio</p></a>
+            <a href="sitemap.html"><i class="fa fa-solid fa-sitemap"></i></a>
         </div>
 
         <div class="footer_copy">
