--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -114,8 +114,8 @@
         </nav>
 
         <div class="mapa_sitio">
-            <p class="mapa_sitio_description">Mapa del sitio</p>
-            <i class="fa fa-solid fa-sitemap"></i>
+            <a href="sitemap.html"><p class="mapa_sitio_description">Mapa del sitio</p></a>
+            <a href="sitemap.html"><i class="fa fa-solid fa-sitemap"></i></a>
         </div>
 
         <div class="footer_copy">
