--- a/sitemap.html
+++ b/sitemap.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/juegos.css">
+    <link rel="stylesheet" href="css/sitemap.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/navbar.css">
     <title>Eduvial</title>
-
 </head>
-
 <body>
     <header class="header">
         <nav class="navbar">
@@ -37,50 +34,33 @@
         </nav>
     </header>
 
-
     <main class="main">
+        <h1 class="main_title">Mapa del sitio</h1>
 
-        <div class="container">
-            <h1 class="eduvial_tittle">Nuestros Juegos</h1>
-            <div class="game-container">
-                <h2 class="eduvial_tittle">Memorama</h2>
-                <p>¡Pon a prueba tu memoria y diviértete con nuestro juego de memoria vial! Busca y empareja las
-                    imágenes
-                    iguales, todas relacionadas con la seguridad vial. ¡Aprende y recuerda las señales de tráfico
-                    mientras juegas!</p>
-                <img src="img/juego_memorama.png" alt="Memorama">
-                <a href="memorama/index.html" class="play-button">Jugar <br> Memorama</a>
+        <section class="mapa_sitio_wrapper">
+            <div class="img_wrapper">
+                <img src="" alt="">
             </div>
-            <div class="game-container">
-                <h2 class="eduvial_tittle">Señales Crush</h2>
-                <p>Divierte en el crushing de las señales de tránsito como si fueran los caramelos para ganar puntos
-                    mientras aprendes. </p>
-                <img src="img/crushImage.png" alt="Señales Crush">
-                <a href="crush/index.html" class="play-button">Jugar <br> Señales Crush</a>
-            </div>
-            <div class="game-container">
-                <h2 class="eduvial_tittle">Ahorcado Vial</h2>
-                <p>Ahorcado Vial es una versión educativa y divertida del clásico juego del ahorcado. Está diseñado para
-                    ayudar a los niños y adolescentes a aprender y recordar términos importantes relacionados con la
-                    educación vial. Cada palabra en el juego está asociada con el tránsito y la seguridad vial, lo que
-                    ayuda a los jugadores a familiarizarse con estos conceptos mientras se divierten.
-                </p>
-                
-                <img src="img/juego_ahorcado.PNG" alt="Ahorcado Vial">
-                <a href="ahorcado/index.html" class="play-button">Jugar <br>Ahorcado</a>
-            </div>
-            <div class="game-container">
-                <h2 class="eduvial_tittle">juego 4</h2>
-                <p>descripcion</p>
-                <img src="imagen4.jpg" alt="Juego 4">
-                <a href="tetris.html" class="play-button">Jugar <br> Tetris</a>
-            </div>
-        </div>
 
+            <h2 class="secondary_title">Inicio / Home</h2>
+            <p class="description">- Datos de la materia y el proyecto</p>
 
+            <h2 class="secondary_title">¿Quiénes somos?</h2>
+            <p class="description">- Descripción de los integrantes</p>
+            <p class="description">- Ficha de los integrantes</p>
+            <p class="description">- Acceso linkedin y ficha de los integrantes</p>
 
+            <h2 class="secondary_title">Avances</h2>
+            <p class="description">- Propuesta principal</p>
+            <p class="description">- Datos del proyecto</p>
 
+            <h2 class="secondary_title">Juegos</h2>
+            <p class="description">- Memorama</p>
+            <p class="description">- Señales Crush</p>
+            <p class="description">- Ahorcado</p>
+        </section>
     </main>
+
     <footer class="footer">
         <nav class="footer_nav">
             <a href="quienes_somos.html">¿Quienes somos?</a>
@@ -98,8 +78,8 @@
             <p class="footer_copy_description">Diseño y desarrollo Web - UADE - 2024</p>
         </div>
     </footer>
+
     <script src="https://kit.fontawesome.com/2b39c56c30.js" crossorigin="anonymous"></script>
     <script src="script/app.js"></script>
 </body>
-
 </html>
