Se agrega imagen al mapa de siito

--- a/sitemap.html
+++ b/sitemap.html
@@ -39,7 +39,7 @@
 
         <section class="mapa_sitio_wrapper">
             <div class="img_wrapper">
-                <img src="" alt="">
+                <img src="img/Diagrama Eduvial Descripciones.png" alt="Diagrama de EDUVIAL">
             </div>
 
             <h2 class="secondary_title">Inicio / Home</h2>
